feat: add transfer and transactions endpoints
