# cmd/server/docs/swagger.yaml
@@ -17,6 +17,27 @@ definitions:
       userID:
         type: integer
     type: object
+  github_com_GiorgiUbiria_banking_system_internal_models.Transaction:
+    properties:
+      createdAt:
+        type: string
+      currency:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      status:
+        description: pending | completed | failed
+        type: string
+      type:
+        description: transfer | exchange
+        type: string
+      updatedAt:
+        type: string
+      userID:
+        type: integer
+    type: object
   gorm.DeletedAt:
     properties:
       time:
@@ -35,6 +56,20 @@ definitions:
   internal_handlers.LoginResponse:
     properties:
       token:
+        type: string
+    type: object
+  internal_handlers.TransferRequest:
+    properties:
+      amount:
+        type: string
+      from_account_id:
+        type: integer
+      to_account_id:
+        type: integer
+    type: object
+  internal_handlers.TransferResponse:
+    properties:
+      message:
         type: string
     type: object
 host: localhost:8080
@@ -99,6 +134,67 @@ paths:
       summary: User login
       tags:
       - auth
+  /transactions:
+    get:
+      description: Get all transactions for the authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/github_com_GiorgiUbiria_banking_system_internal_models.Transaction'
+            type: array
+        "401":
+          description: unauthorized
+          schema:
+            type: string
+        "500":
+          description: server error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: List user transactions
+      tags:
+      - transactions
+  /transactions/transfer:
+    post:
+      consumes:
+      - application/json
+      description: Transfer money between accounts for the authenticated user
+      parameters:
+      - description: Transfer request
+        in: body
+        name: transfer
+        required: true
+        schema:
+          $ref: '#/definitions/internal_handlers.TransferRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/internal_handlers.TransferResponse'
+        "400":
+          description: invalid request
+          schema:
+            type: string
+        "401":
+          description: unauthorized
+          schema:
+            type: string
+        "500":
+          description: server error
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Transfer money between accounts
+      tags:
+      - transactions
 schemes:
 - http
 securityDefinitions:
